Release 1.0.0 (#266)
* fix: unlock transactions which won't be published now (#264)

* fix: unlock transactions which won't be published now

* fix: unlock transactions which won't be published now

* fix: unlock transactions which won't be published now

* fix: adjusting metadataschema to accept strings or arrays when strings are to long

* chore: fix tests

* feat: unlocking remaining transactions

* chore: adjusting tests

* chore: adjusting blockchain publisher module to same number format as accounting core

* fix: journal enrichment must adjust the operation type as well (#269)

* fix: journal enrichment must adjust the operation type as well

* chore: removing the workaround

* chore: spotless

* feat: added the possibility to adjust the start date for results carried forward

* chore: adding tests

* chore: adding tests

* chore: spotless

* chore: adjusting build job

* feat: moving journalenrichmentstask and fixing totalLCY amount

* Fix: Parent cost center missing in extraction

* chore: fixing test

* chore: renamed variable for debouncer configuration

* fix: Missing currecny data should result invalid transaction

* fix: transactional runner to not create new database transactions (#273)

* fix: transactional runner to not create new database transactions

* chore: adjusting the transactionBAtcHStatus update to run after transactions

* chore: adjusting transaction starting

* chore: test adjustment

* chore: returned to save and flush

* chore: spotless

* chore: adding transactional back to update transaction batch

* chore: spotless

* fix: fixing transactional runner

* fix: optimizing internal transactions (#276)

* fix: optimizing internal transactions

* fix: optimizing internal transactions

* feat: adding TxStatusUpdaterJob

* feat: adding TxStatusUpdaterJob

* feat: adding TxStatusUpdaterJob

* chore: adjusted test for new transactionUpdaterJob

* chore: spotless

* chore: refactored and more error save

* chore: adding tests

* fix: blockcha