@@ -15,12 +15,16 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import org.cardanofoundation.lob.app.accounting_reporting_core.domain.core.TransactionType;
 import org.cardanofoundation.lob.app.accounting_reporting_core.domain.core.reconcilation.Reconcilation;
 import org.cardanofoundation.lob.app.accounting_reporting_core.domain.core.reconcilation.ReconcilationCode;
 import org.cardanofoundation.lob.app.accounting_reporting_core.domain.entity.*;
 import org.cardanofoundation.lob.app.accounting_reporting_core.repository.TransactionItemExtractionRepository;
 import org.cardanofoundation.lob.app.accounting_reporting_core.resource.views.ExtractionTransactionItemView;
 import org.cardanofoundation.lob.app.accounting_reporting_core.resource.views.ExtractionTransactionView;
+import org.cardanofoundation.lob.app.organisation.OrganisationPublicApi;
+import org.cardanofoundation.lob.app.organisation.domain.entity.OrganisationCostCenter;
+import org.cardanofoundation.lob.app.organisation.domain.entity.OrganisationProject;
 
 @Service
 @Slf4j
@@ -28,11 +32,13 @@ import org.cardanofoundation.lob.app.accounting_reporting_core.resource.views.Ex
 @Transactional
 public class ExtractionItemService {
     private final TransactionItemExtractionRepository transactionItemRepositoryImpl;
+    private final OrganisationPublicApi organisationPublicApi;
 
     @Transactional(readOnly = true)
     public ExtractionTransactionView findTransactionItems(LocalDate dateFrom, LocalDate dateTo, List<String> accountCode, List<String> costCenter, List<String> project, List<String> accountType, List<String> accountSubType) {
 
-        List<ExtractionTransactionItemView> transactionItem = transactionItemRepositoryImpl.findByItemAccount(dateFrom, dateTo, accountCode, costCenter, project,accountType,accountSubType).stream().map(this::extractionTransactionItemViewBuilder).collect(Collectors.toList());
+        List<ExtractionTransactionItemView> transactionItem = transactionItemRepositoryImpl.findByItemAccount(dateFrom, dateTo, accountCode, costCenter, project, accountType, accountSubType)
+                .stream().map(this::extractionTransactionItemViewBuilder).toList();
 
         return ExtractionTransactionView.createSuccess(transactionItem);
     }
@@ -40,13 +46,28 @@ public class ExtractionItemService {
     @Transactional(readOnly = true)
     public List<ExtractionTransactionItemView> findTransactionItemsPublic(String orgId, LocalDate dateFrom, LocalDate dateTo, Set<String> event, Set<String> currency, Optional<BigDecimal> minAmount, Optional<BigDecimal> maxAmount, Set<String> transactionHash) {
 
-        return transactionItemRepositoryImpl.findByItemAccountDate(orgId, dateFrom, dateTo, event, currency, minAmount, maxAmount, transactionHash).stream().map(item -> {
-            return extractionTransactionItemViewBuilder(item);
-        }).toList();
+        List<ExtractionTransactionItemView> list = transactionItemRepositoryImpl.findByItemAccountDate(orgId, dateFrom, dateTo, event, currency, minAmount, maxAmount, transactionHash).stream().map(item -> enrichTransactionItemViewBuilder(extractionTransactionItemViewBuilder(item))).toList();
 
+        // aggregating in case there are duplicate items due to the enrichment process it is possible to have newly duplicates
+        return list.stream()
+                .collect(Collectors.groupingBy(ExtractionTransactionItemView::aggregationHashCode, Collectors.toSet()))
+                .values().stream()
+                .map(itemSet -> {
+                    ExtractionTransactionItemView aggregatedItem = itemSet.iterator().next();
+                    aggregatedItem.setAmountFcy(itemSet.stream()
+                            .map(ExtractionTransactionItemView::getAmountFcy)
+                            .reduce(ZERO, BigDecimal::add));
+                    aggregatedItem.setAmountLcy(itemSet.stream()
+                            .map(ExtractionTransactionItemView::getAmountLcy)
+                            .reduce(ZERO, BigDecimal::add));
+                    return aggregatedItem;
+                })
+                .toList();
     }
 
     private ExtractionTransactionItemView extractionTransactionItemViewBuilder(TransactionItemEntity item) {
+        Optional<OrganisationCostCenter> costCenter = organisationPublicApi.findCostCenter(item.getTransaction().getOrganisation().getId(), item.getCostCenter().map(CostCenter::getCustomerCode).orElse(null));
+        Optional<OrganisationProject> project = organisationPublicApi.findProject(item.getTransaction().getOrganisation().getId(), item.getProject().map(Project::getCustomerCode).orElse(null));
         return new ExtractionTransactionItemView(
                 item.getId(),
                 item.getTransaction().getTransactionInternalNumber(),
@@ -61,7 +82,7 @@ public class ExtractionItemService {
                 item.getAccountCredit().map(Account::getCode).orElse(null),
                 item.getAccountCredit().flatMap(Account::getName).orElse(null),
                 item.getAccountCredit().flatMap(Account::getRefCode).orElse(null),
-                item.getAmountFcy(),
+                item.getTransaction().getTransactionType().equals(TransactionType.FxRevaluation) ? item.getAmountLcy() : item.getAmountFcy(),
                 item.getAmountLcy(),
                 item.getFxRate(),
                 item.getCostCenter().map(CostCenter::getCustomerCode).orElse(null),
@@ -79,7 +100,32 @@ public class ExtractionItemService {
                 item.getDocument().flatMap(d -> d.getCounterparty().map(Counterparty::getCustomerCode)).orElse(null),
                 item.getDocument().flatMap(d -> d.getCounterparty().map(Counterparty::getType)).isPresent() ? item.getDocument().flatMap(d -> d.getCounterparty().map(Counterparty::getType)).map(Object::toString).orElse(null) : null,
                 item.getDocument().flatMap(document -> document.getCounterparty().flatMap(Counterparty::getName)).orElse(null),
-                item.getRejection().map(Rejection::getRejectionReason).orElse(null)
+                item.getRejection().map(Rejection::getRejectionReason).orElse(null),
+                costCenter.map(OrganisationCostCenter::getParentCustomerCode).orElse(null),
+                costCenter.flatMap(organisationCostCenter -> organisationCostCenter.getParent()).flatMap(parentCostCenter -> Optional.ofNullable(parentCostCenter.getExternalCustomerCode())).orElse(null),
+                costCenter.flatMap(organisationCostCenter -> organisationCostCenter.getParent()).flatMap(parentCostCenter -> Optional.ofNullable(parentCostCenter.getName())).orElse(null),
+                project.flatMap(organisationProject -> organisationProject.getParent()).flatMap(parentProject -> Optional.ofNullable(parentProject.getId().getCustomerCode())).orElse(null),
+                project.flatMap(organisationProject -> organisationProject.getParent()).flatMap(parentProject -> Optional.ofNullable(parentProject.getExternalCustomerCode())).orElse(null),
+                project.flatMap(organisationProject -> organisationProject.getParent()).flatMap(parentProject -> Optional.ofNullable(parentProject.getName())).orElse(null)
         );
+    }
+
+    private ExtractionTransactionItemView enrichTransactionItemViewBuilder(ExtractionTransactionItemView item) {
+
+        item.setCostCenterCustomerCode(item.getParentCostCenterCustomerCode());
+        item.setCostCenterExternalCustomerCode(item.getParentCostCenterExternalCustomerCode());
+        item.setCostCenterName(item.getParentCostCenterName());
+        item.setProjectCustomerCode(item.getParentProjectCustomerCode());
+        item.setProjectExternalCustomerCode(item.getParentProjectExternalCustomerCode());
+        item.setProjectName(item.getParentProjectName());
+
+        item.setParentCostCenterName(null);
+        item.setParentCostCenterCustomerCode(null);
+        item.setParentCostCenterExternalCustomerCode(null);
+        item.setParentProjectName(null);
+        item.setParentProjectCustomerCode(null);
+        item.setParentProjectExternalCustomerCode(null);
+
+        return item;
     }
 }
